# rust-fullstack

./: .env  .gitignore  .postcssrc.json  Cargo.toml  docker-compose.yml  package-lock.json  package.json  podman-compose.yml  tailwind.config.js
migrations/2023-10-21-232221_create_users/: up.sql
migrations/2024-04-09-040521_create_posts_table/: down.sql  up.sql
migrations/2024-04-10-070906_posts_tags_not_null/: down.sql  up.sql
migrations/2024-04-10-071312_more_nullable_fix/: down.sql  up.sql
src/: error.rs  index.html  index.js  main.css  main.rs  schema.rs
src/background/: mod.rs  posts_broker.rs
src/components/: mod.rs  user_list_component.rs
src/components/user/: mod.rs  style.css
src/config/: mod.rs  tracing.rs
src/helpers/: error.rs  mod.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/middleware/: cors.rs  custom_json_extractor.rs  logging.rs  mod.rs
src/models/: post.rs  user.rs
src/routes/: posts.rs  users.rs
src/services/: mod.rs  users.rs
src/templates/posts/: create_post.html  ws_post.html
src/templates/users/: create.html  get.html
