[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }

tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1", features = ["full"] }

diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
diesel-async = { version = "0.4", features = ["postgres", "deadpool", "tokio"] }
deadpool = { version = "0.10", features = ["rt_tokio_1"] }

figment = { version = "0.10", features = ["env", "json"] }

axum = { version = "0.7", features = ["tracing", "ws", "multipart"] }
axum-macros = "0.4"
tower-http = { version = "0.5", features = [
  "cors",
  "trace",
  "fs",
  "compression-gzip",
  "set-header",
] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tera = "1"
