[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }

tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1.6", features = ["full"] }

diesel = { version = "2", features = ["postgres", "uuid"] }
diesel_migrations = "2"
diesel-async = { version = "0.4.1", features = [
  "postgres",
  "deadpool",
  "tokio",
] }
deadpool = { version = "*", features = ["rt_tokio_1"] }

figment = { version = "0.10.11", features = ["env", "json"] }

axum = { version = "0.7", features = ["tracing", "ws", "multipart"] }
axum-macros = "0.4"
tower-http = { version = "0.5.0", features = [
  "cors",
  "trace",
  "fs",
  "compression-gzip",
  "set-header",
] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tera = "1"
deadpool-lapin = "0.12.0"
lapin = { version = "2.3.1", features = ["serde_json"] }
futures-util = "0.3.30"
dashmap = "5.5.3"
uuid = { version = "1.8.0", features = ["serde", "v7"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures = "0.3.30"
