[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-executor-trait = "2"
tokio-reactor-trait = "2"

bytes = { version = "1" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1", features = ["full"] }

diesel = { version = "2", features = ["postgres", "uuid"] }
diesel_migrations = "2"
diesel-async = { version = "0.6", features = ["postgres", "deadpool", "tokio"] }
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
deadpool-lapin = "0.13"
lapin = { version = "3" }

figment = { version = "0.10", features = ["env", "json"] }

axum = { version = "0.8", features = ["tracing", "ws", "multipart"] }
axum-macros = "0.5"
axum-extra = { version = "0.10", features = ["typed-header"] }

tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "fs",
  "compression-gzip",
  "set-header",
] }
tower = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

tera = "1"
futures-util = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["serde", "v7"] }
futures = "0.3"
notify = "8"

macros = { path = "./src/macros/" }
